--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task-title,
+.input-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1
@@ -63,7 +64,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for="new-task"] {
+.section-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -89,16 +90,16 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+.title-add-item {
   display: block;
   margin: 0 0 20px;
 }
-#new-task {
+.section-add__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -123,17 +124,17 @@ li > label {
 li > input[type="text"] {
   width: 226px
 }
-.delete img {
+.button-delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete img:hover {
+.button-delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+.completed-tasks label {
   text-decoration: line-through;
   color: #888;
 }
